--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ayush Sachan",
-  "name": "Create React App Sample",
+  "short_name": "Blockbuster",
+  "name": "AYUSH SACHAN",
   "icons": [
     {
       "src": "favicon.ico",
